NIe można wykonywać kilku poleceń na raz. Smuteczek powracam do JGITa